@@ -48,6 +48,7 @@
 * Upgrade apache-poi library to version 4.0.1 for Excel file support
 * Upgrade commons-beanutils library to version 1.9.3
 * Fix bug in RQL queries over in-memory lists where not having a sign on the sort parameter would cause the query to fail
+* Fix bug in RQL queries where empty IN clause would fail on MySQL
 
 *Version 3.5.4*
 * Bugfix: Convert dataPointTags, installedModules, and fileStores tables in database conversions
